fixed alignment
played with <br> and width: %;

--- a/css/main.css
+++ b/css/main.css
@@ -171,7 +171,7 @@ h1 {
 
 .days li, .week li {
     display: inline-block;
-    width: 13.6%;
+    width: 12%;
     text-align: center;
     margin: 0px;
     font-size:12px;
@@ -182,12 +182,13 @@ h1 {
 
 .week2 li {
   display: inline-block;
-  width: 13.6%;
+  width: 12%;
   text-align: center;
   margin: 0px;
   font-size:12px;
   color: black;
   padding-top: 20px;
+  text-align: center;
 }
 
 .time li {
@@ -248,15 +249,20 @@ h1 {
   color: gray;
 }
 
-@media screen and (max-width: 290px) {
-    .weekdays li, .days li {
-      width: 12.2%;
+@media screen and (max-width: 220px) {
+    .week li, .days li, .week2 li {
+      width: 12%;
     }
+  }
+
+  .l-dot, .m-dot, .d-dot {
+      height: 5px;
+      width: 5px;
   }
 
 @media screen and (max-width: 450px) {
     .weekdays li, .days li {
-      width: 12.5%;
+      width: 12%;
     }
 
     .sidenav {
@@ -268,5 +274,6 @@ h1 {
 }
 
 @media screen and (max-width:720px) {
-    .weekdays li, .days li {width: 13.1%;}
+    .weekdays li, .days li {
+      width: 12.1%;}
 }
